; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_ca8210.c_ca8210_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_ca8210.c_ca8210_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee802154_hw = type { %struct.ca8210_priv* }
%struct.ca8210_priv = type { i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@MAC_RX_ON_WHEN_IDLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"Setting rx_on_when_idle failed, status = %d\0A\00", align 1
@HWME_LQILIMIT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [38 x i8] c"Setting lqilimit failed, status = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ieee802154_hw*)* @ca8210_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ca8210_start(%struct.ieee802154_hw* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ieee802154_hw*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.ca8210_priv*, align 8
  store %struct.ieee802154_hw* %0, %struct.ieee802154_hw** %3, align 8
  store i32 0, i32* %6, align 4
  %8 = load %struct.ieee802154_hw*, %struct.ieee802154_hw** %3, align 8
  %9 = getelementptr inbounds %struct.ieee802154_hw, %struct.ieee802154_hw* %8, i32 0, i32 0
  %10 = load %struct.ca8210_priv*, %struct.ca8210_priv** %9, align 8
  store %struct.ca8210_priv* %10, %struct.ca8210_priv** %7, align 8
  %11 = load %struct.ca8210_priv*, %struct.ca8210_priv** %7, align 8
  %12 = getelementptr inbounds %struct.ca8210_priv, %struct.ca8210_priv* %11, i32 0, i32 0
  store i32 -1, i32* %12, align 8
  store i32 1, i32* %5, align 4
  %13 = load i32, i32* @MAC_RX_ON_WHEN_IDLE, align 4
  %14 = load %struct.ca8210_priv*, %struct.ca8210_priv** %7, align 8
  %15 = getelementptr inbounds %struct.ca8210_priv, %struct.ca8210_priv* %14, i32 0, i32 1
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = call i32 @mlme_set_request_sync(i32 %13, i32 0, i32 1, i32* %5, %struct.TYPE_3__* %16)
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %29

20:                                               ; preds = %1
  %21 = load %struct.ca8210_priv*, %struct.ca8210_priv** %7, align 8
  %22 = getelementptr inbounds %struct.ca8210_priv, %struct.ca8210_priv* %21, i32 0, i32 1
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @dev_crit(i32* %24, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32 %25)
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @link_to_linux_err(i32 %27)
  store i32 %28, i32* %2, align 4
  br label %47

29:                                               ; preds = %1
  %30 = load i32, i32* @HWME_LQILIMIT, align 4
  %31 = load %struct.ca8210_priv*, %struct.ca8210_priv** %7, align 8
  %32 = getelementptr inbounds %struct.ca8210_priv, %struct.ca8210_priv* %31, i32 0, i32 1
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %32, align 8
  %34 = call i32 @hwme_set_request_sync(i32 %30, i32 1, i32* %6, %struct.TYPE_3__* %33)
  store i32 %34, i32* %4, align 4
  %35 = load i32, i32* %4, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %46

37:                                               ; preds = %29
  %38 = load %struct.ca8210_priv*, %struct.ca8210_priv** %7, align 8
  %39 = getelementptr inbounds %struct.ca8210_priv, %struct.ca8210_priv* %38, i32 0, i32 1
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i32, i32* %4, align 4
  %43 = call i32 @dev_crit(i32* %41, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0), i32 %42)
  %44 = load i32, i32* %4, align 4
  %45 = call i32 @link_to_linux_err(i32 %44)
  store i32 %45, i32* %2, align 4
  br label %47

46:                                               ; preds = %29
  store i32 0, i32* %2, align 4
  br label %47

47:                                               ; preds = %46, %37, %20
  %48 = load i32, i32* %2, align 4
  ret i32 %48
}

declare dso_local i32 @mlme_set_request_sync(i32, i32, i32, i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @dev_crit(i32*, i8*, i32) #1

declare dso_local i32 @link_to_linux_err(i32) #1

declare dso_local i32 @hwme_set_request_sync(i32, i32, i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
